--- a/2.atom.words.association.44frase.txt.+canzone.lyric.rap.ita.html
+++ b/2.atom.words.association.44frase.txt.+canzone.lyric.rap.ita.html
@@ -78,7 +78,333 @@ strumentale
 
 
 
+<a id=10necuraneluogo>video526 MARRACASH FEAT SALMO - NE' CURA NE' LUOGO</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/b-HO21Lv2oE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://youtu.be/UYlJNpvDKKI
+******
 
+canzoni minestrone 
+marra magro
+	Secondo te quanto peso ad occhio e croce?
+	Se dimagrisco di me vi resta solo la voce
+
+droghe
+	polizia
+		Sospetto che mi prendano un campione di sangue
+	utilizzo antidepressivo
+		Droghe per sfasciarsi, per superare i complessi
+		E dopo psicofarmaci per rimettere assieme i pezzi
+pessimismo
+	no save
+		Perché ho già toccato il fondo
+	La vita è una troia, veniamo al mondo per soddisfarne le voglie
+
+marra analisi italia
+	C'è già stato il Risorgimento, ora ci serve una resurrezione
+	(grecia - tragedia greca)
+	Se finiamo come in Grecia è una vera tragedia greca
+
+v1 vita aiuto donna- marcia
+	baby ti dico amiamoci, non possediamoci
+	Non prendiamoci in giro
+	Che già tutto il resto è uno schifo
+	Ma tu eri di tutti come l'accendino
+	
+v1 schiavi
+	E non c'è schiavo più grande di chi pensa di essere libero
+
+v1 mentiamo -maschere- freddi
+	È normale annuire ad un altro sapendo che mente
+	Indurirsi, diventare freddi e taglienti
+	
+v1 vita dannata droghe e tradimento + mentire
+	Lo so, mia madre pensa che mi drogo pesante
+	La mia ragazza invece che vada assieme alle altre
+	Io nego, fra', ma c'hanno ragione entrambe
+analisi tempo no sprecare
+	Il tempo non lo puoi comprare, lo puoi solo vendere
+artista valore morto
+	La storia insegna che musicalmente fai molti più soldi da morto
+
+analisi economia poverta
+	Come una madre campa sette figli
+	Sette figli non campano una madre
+	
+analisi su dio - societa
+	Il vuoto tra le mani, Dio pensa nel genio
+	Sogna nel poeta e dorme tra gli infami
+	
+	non ascolta
+		Ma Dio sta all'ultimo piano e ha le porte blindate
+	non si fa vedere
+		Fra', io non lo vedo, vedo spesso Belén Rodríguez
+		Forse Dio no, però lei è sempre lì che sorride
+*****
+
+
+
+C'è già stato il Risorgimento, ora ci serve una resurrezione
+La costituzione danneggia la mia costituzione
+Secondo te quanto peso ad occhio e croce?
+Se dimagrisco di me vi resta solo la voce
+Lo so, mia madre pensa che mi drogo pesante
+La mia ragazza invece che vada assieme alle altre
+Io nego, fra', ma c'hanno ragione entrambe
+Sospetto che mi prendano un campione di sangue
+Ma non c'è, ma non c'è, ma non c'è, ma non c'è
+Ma non c'è una cura per l'anima
+Droghe per sfasciarsi, per superare i complessi
+E dopo psicofarmaci per rimettere assieme i pezzi
+Metà del tempo a farsela e metà a farsela scendere
+Il tempo non lo puoi comprare, lo puoi solo vendere
+Crisi dell'occidente, dissidente
+Uccidetemi facendolo sembrare un incidente
+Eppure c'è più gente in discoteca che in chiesa
+Se finiamo come in Grecia è una vera tragedia greca
+Vorrei ridarvi i documenti
+E bruciare i miei soldi e miei oggetti (ehi, ehi)
+Perché ho già toccato il fondo
+Me ne andrei se solo ci fosse un posto (ehi, ehi)
+Ma non c'è, ma non c'è, ma non c'è, ma non c'è, ma non c'è
+Una cura per l'anima (ehi, ehi)
+Non c'è, non c'è, non c'è, non c'è, non c'è
+Quindi guido la carica, alla carica (alla carica)
+Non c'è cura né luogo, alla carica (alla carica)
+Quindi resta e combatti
+Sono vivo e non mi sono accorto
+La storia insegna che musicalmente fai molti più soldi da morto
+Dovrei crepare a ventisette anni come i più grandi
+Lasciare i soldi agli altri e pagargli il conto
+Musica dà, musica toglie
+La vita è una troia, veniamo al mondo per soddisfarne le voglie
+Aspetto che i fantasmi vengano e mi prendano
+Pensiamo troppo intensamente e gli altri sentono
+Il vuoto tra le mani, Dio pensa nel genio
+Sogna nel poeta e dorme tra gli infami
+La mia voce chiama quanto tutto tace
+Lo diceva Abraham, "evita la fama se vuoi vivere in pace"
+Se avessi bling bling avrei un posto, frate
+Ma Dio sta all'ultimo piano e ha le porte blindate
+Salmo nel nome del padre, vita immorale
+Come una madre campa sette figli
+Sette figli non campano una madre
+La pace è solo una parola, scrivila
+Passi più tempo a rimpiangerla piuttosto che a viverla
+Vorrei ridarvi i documenti
+E bruciare i miei soldi e miei oggetti (ehi, ehi)
+Perché ho già toccato il fondo
+Me ne andrei se solo ci fosse un posto (ehi, ehi)
+Ma non c'è, ma non c'è, ma non c'è, ma non c'è, ma non c'è
+Una cura per l'anima (ehi, ehi)
+Non c'è, non c'è, non c'è, non c'è, non c'è
+Quindi guido la carica
+Baby, ti dico amiamoci, non possediamoci
+Non prendiamoci in giro
+Che già tutto il resto è uno schifo
+Ma tu eri di tutti come l'accendino
+E io non vivo
+Ora che ho più scadenze della roba che ho nel frigo
+Nella prossima vita voglio essere uno sportivo
+Così se sono il più bravo, cazzo, è oggettivo
+Il capitalismo mi ha reso competitivo
+E non c'è schiavo più grande di chi pensa di essere libero
+E in un mondo in cui la parola non conta niente
+È normale annuire ad un altro sapendo che mente
+Indurirsi, diventare freddi e taglienti
+L'ambiente opera e lascia i ferri dentro i pazienti
+Dov'è questo potere dell'amore?
+Se poi è l'amore per il potere che consuma le persone
+Fra', io non lo vedo, vedo spesso Belén Rodríguez
+Forse Dio no, però lei è sempre lì che sorride
+Vorrei ridarvi i documenti
+E bruciare i miei soldi e miei oggetti (ehi, ehi)
+Perché ho già toccato il fondo
+Me ne andrei se solo ci fosse un posto (ehi, ehi)
+Ma non c'è, ma non c'è, ma non c'è, ma non c'è, ma non c'è
+Una cura per l'anima (ehi, ehi)
+Non c'è, non c'è, non c'è, non c'è, non c'è
+Quindi guido la carica, alla carica (alla carica)
+Non c'è cura né luogo, alla carica (alla carica)
+Quindi resta e combatti
+
+
+<a id=9clubdogo.ilmiomondo>video526 CLUB DOGO - IL MIO MONDO LE MIE REGOLE</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9tyeotT0Q6c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+***************
+modalita testo lista della spesa
+video in concerto- palco
+
+
+
+(rivale sequenziale)
+(tacche vacche picche kikke)
+stadio panico serramanico
+prive fume' caffe
+viaggi massaggi
+taco bell -motel
+bianca - panca - banca - bamba
+
+clonata -coniata -
+tonica cronica-- monica
+scarface - tutta l'erba di GRACE -Zoccole su my SPACE
+fumo-carburo-oscuro-tamburo -pisciaturo
+inspiri -tiri - buster SPIRIT
+pornografia-polizia
+Il primo BRANCO- L'ultimo BAGNO
+troia -storia 
+para -marca -scarpa
+pacco -palco -sfatto - morgan - factor
+notte mignotte
+
+
+*****
+Testo
+Io esco dal fumo delle marmitte
+La bamba il fumo le kikke
+La scopa ed il poker
+Gli assi ai bastoni e gli assi di picche
+Sinocche e le quatro tacche
+Le suore le vacche
+Sgrille passive
+Quelle impazzite
+Quelle nere quelle bianche zio
+Cambio sequenziale
+I THROW UP
+Sulla tangenziale
+La curva e lo stadio
+Zio la mia squadra e quella rivale
+Gli attacchi di panico
+Il serramanico
+Sulla lingua come
+LE AFTE
+La pasta per l'ansia e quella per l'after
+La corda per il privè
+Gli occhiali con le lenti fumè
+L'amore le cose zio le paludi le rose e i caffè
+Oh
+Mc donald e TACO BELL
+Il sottopassaggio
+Fai le buste e i viaggi
+Massaggi dentro i motel
+L'amico MORTO
+L'amico che fa brutto
+I concerti e la collana col nome del gruppo
+Frà la pubblicità
+Scegli COPPIA o menage a TROIS
+La maglia firmata
+Quella strappata
+La città
+Il Mio Mondo
+Le Mie Regole
+E' da qui che vengo zio e da qui non me ne vado piu'
+Il Mio Mondo
+Le Mie Regole
+Vivo Come Voglio E Non Penso A Cosa Ne Pensi Tu
+Il Mio Mondo
+Le Mie Regole
+E' da qui che vengo zio e da qui non me ne vado piu'
+Il Mio Mondo
+Le Mie Regole
+Vivo Come Voglio E Non Penso A Cosa Ne Pensi Tu
+Quanta Bianca
+Nuovo papa sulla
+Panca
+Tasche gonfie
+Un cazzo in banca
+Vado a prendere altra bamba
+Mentre vai al lavoro in banca
+Da bambino ero già sguercio
+In testa avevo solo il peggio
+NON sarei mai diventato agente di commercio
+Prometto Che Domani Smetto
+Seee.
+La Strofa Che Spacca Che
+Per Capirla Mandi Indietro
+Le chiamate col 4888
+Perquisa
+Visa
+Clonata
+Slang
+Nuova Parola
+Coniata
+Occhiaia Cronica
+VODKA Con Acqua Tonica
+Una Tipa Non Mi cambia
+Cambio Io Francesca Laura E Monica
+Van Damme E KEN I
+Cartoni e Film + Violenti
+Ora SOno tutti + buoni
+Ci sono soltanto effetti
+Gerenazione scarface
+Fra sotto
+Coi free base
+Tutta l'erba di grace
+Zoccole su my space
+Rimo pump
+Jordan
+Air max
+Silver
+Il mio nome nelle firme
+Il mio nome sulle fibbie
+Il Mio Mondo
+Le Mie Regole
+E' da qui che vengo zio e da qui non me ne vado piu'
+Il Mio Mondo
+Le Mie Regole
+Vivo Come Voglio E Non Penso A Cosa Ne Pensi Tu
+Il Mio Mondo
+Le Mie Regole
+E' da qui che vengo zio e da qui non me ne vado piu'
+Il Mio Mondo
+Le Mie Regole
+Vivo Come Voglio E Non Penso A Cosa Ne Pensi Tu
+La colla del fumo
+La conta e il carburo
+Il tacker oscuro
+Il carrello e il tamburo
+Il duro ed il pisciaturo
+La prima che rolli e inspiri
+La prima che stendi e tiri
+La prima sul fifty top
+La prima sul buster spirit
+Frà la pornografia
+Il nome della tua via
+Il primo branco
+L'ultimo bagno
+E la polizia
+Non voltarti indietro
+I facchi sul dominator
+Le bugie di una troia
+Il mio nome nella storia
+Da sbarbato
+La para dei vestiti di marca
+Ora li mando io in para
+Dal cappello alla scarpa
+Le buste nel pacco
+I buster sul palco
+Piu' sfatto
+Di simona e di morgan a
+X Factor
+Gli incubi la notte
+Gli amici ricchi e pregiudicati
+Amati e odiati
+Le regine e le mignotte
+Mamma dice che
+Devo finire l'università
+Io una vita rock'n'roll
+Ma con la musica rap
+Il Mio Mondo
+Le Mie Regole
+E' da qui che vengo zio e da qui non me ne vado piu'
+Il Mio Mondo
+Le Mie Regole
+Vivo Come Voglio E Non Penso A Cosa Ne Pensi Tu
+Il Mio Mondo
+Le Mie Regole
+E' da qui che vengo zio e da qui non me ne vado piu'
+Il Mio Mondo
+Le Mie Regole
+Vivo Come Voglio E Non Penso A Cosa Ne Pensi Tu
 <a id=8gue.gesu>video526 GUE' PEQUENO - FIGLIO DI DIO </a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kDDm9I7cbAk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>			
 https://youtu.be/j2MdKes4X6Y
