--- a/2.atom.words.association.44frase.txt.+canzone.lyric.rap.ita.html
+++ b/2.atom.words.association.44frase.txt.+canzone.lyric.rap.ita.html
@@ -26,8 +26,9 @@ farfugliamenti
 
 trap
 	soldi -maserati #5ilprofeta.maserati
-
-
+	target sono ragazzini
+		primo amore cupido #11sferaebbasta.cupido
+		
 ritornello autocelebrativo
 	applausi per fibra
 	su le mani x coez
@@ -75,6 +76,114 @@ strumentale
 
 
 
+
+
+
+<a id=11sferaebbasta.cupido>video526 Sfera Ebbasta - Cupido (Visual) ft. Quavo</a>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/k8Us_n3hpyA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.youtube.com/watch?v=6BCpyH1ZNZE
+anno 2018-09-03
+14milioni 
+******
+
+
+suoni ritardati - caratterizzano trap
+	skrt
+
+offuscamento alcool+ weed
+	Ho bevuto troppo, meglio-
+	E vieni qua, mentre fumo un blunt
+	Siamo tutti annebbiati dal fumo e dal Bacardi
+
+lui finto cupido
+	Ti ho colpita, sono Cupido
+	Ho una freccia come Cupido -E l'ho lanciata verso di te
+lui stronzo ricco
+	Foto, woo, ti compro una borsa di Dior
+	A cena in quel ristorante che adori
+	Però poi mi faccio aspettare
+	Two seats the coupe, we together (skrt, skrt)
+	
+
+
+sx
+	Ice on my neck, we together 
+
+	
+*****
+
+Con le altre faccio lo stupido
+Ho bevuto troppo, meglio se
+Mi riportano da te
+Ti ho colpita, sono Cupido
+Una tipa chic come te
+Vuole un trap boy come me
+E io l'ho capito subito
+Ami se rispondo male, se non mi faccio trovare
+A cena in quel ristorante che adori
+Però poi mi faccio aspettare
+Foto con altre, ma è tutto normale
+Fai la gelosa, non rispondi al cellulare, ah
+E vieni qua, mentre fumo un blunt
+Ti verso la Sprite sul baby doll
+Siamo rock 'n' roll
+Al mio collo flash, flash
+Foto, woo, ti compro una borsa di Dior
+Ti penso my love, yah
+Anche se la sera, quando si fa tardi
+Sono in giro con gli altri e siamo tutti bastardi
+Siamo tutti annebbiati dal fumo e dal Bacardi
+Forse questa volta meglio non incontrarsi
+Con le altre faccio lo stupido
+Ho bevuto troppo, meglio se
+Mi riportano da te
+Ti ho colpita, sono Cupido
+Una tipa chic come te
+Vuole un trap boy come me
+Con le altre faccio lo stupido (skrt, skrt)
+Ma non le scambierei mai con te
+Non rispondere al tuo ex
+Ho una freccia come Cupido (skrt, skrt)
+E l'ho lanciata verso di te
+Migos, Quavo! Oh yeah
+She fell in love with a trap nigga (yaa)
+I fell in love with a trap bitch (trap)
+Huncho havin' it (Huncho)
+Huncho savage (yeah)
+No, she not average (no)
+She addicted to the carats (carats)
+Designer high fashion (designer)
+We gon' ball at the Mavericks (ball)
+I whip up the dope with her brother (whip it up)
+Give a hundred racks to her mother (racks)
+Huncho came from the gutter (Huncho)
+Now we made it out, we together (we together)
+Ice on my neck, we together (yeah, together)
+Two seats the coupe, we together (skrt, skrt)
+Everytime I shoot, we together (shoot)
+Count racks in a room, we together (gang)
+Get back, we get it in wide loads (wide loads)
+Here comes the Five-O (twelve)
+Don't tell nobody, your eyes closed (eyes closed)
+Your eyes closed (yeah)
+You didn't see nothin' (yeah)
+I'm with the foreign, out the country (yeah)
+I'm whippin' dope out in Italy (Italy)
+Cupido Huncho is they feelin' me (Cupido)
+Con le altre faccio lo stupido
+Ho bevuto troppo, meglio se
+Mi riportano da te
+Ti ho colpita, sono Cupido
+Una tipa chic come te
+Vuole un trap boy come me
+Con le altre faccio lo stupido (skrt, skrt)
+Ma non le scambierei mai con te
+Non rispondere al tuo ex
+Ho una freccia come Cupido (skrt, skrt)
+E l'ho lanciata verso di te
+Con le altre faccio lo stupido
+Ti ho colpita, sono Cupido
 
 
 
