--- a/2.atom.words.association.44frase.txt.+canzone.lyric.rap.ita.html
+++ b/2.atom.words.association.44frase.txt.+canzone.lyric.rap.ita.html
@@ -56,6 +56,7 @@ testa
 		
 	droghe pesanti
 vita1
+	veniamo da 0 #21 arriviamo successo 
 	strada
 		dannato come gesu (figlio di dio) #8
 	nato in crimine padre violento
@@ -86,6 +87,119 @@ strumentale
 musica
 	copiata da fibra - emis killa
 	
+
+
+<a id=21>video526 Sfera Ebbasta - Ciny (Prod. Charlie Charles)</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VnaZsxX-SPo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+********
+video fighe, cannabis, vista annebbiata, finte pistole
+	generalizzati muracca.... (colore ...luci...)
+	
+	
+figo 
+	no lavoro
+		E okay, forse dovrei trovarmi un lavoro vero
+
+	finti gangsta con nemici immaginari
+		Sennò piglio schiaffi quando torno in zona
+
+testa annebbiata
+	cannabis
+		Col mio socio affianco, che la gira intanto
+		Facci fumare, poi levati
+		Sotto i palazzi a fumare come ciminiere
+	
+
+
+vita1 
+	povero
+		siam partiti da zero 
+	amici
+		E okay, porto con me i miei fra', 
+		no infami
+			Anche in mezzo a trenta, manco un testimone
+	x soldi (morti o galera)
+		Con qualche amico che riposa in pace
+		E qualche amico che riposa al fresco
+		fuck police
+			Mai socializzato col carabiniere
+
+
+
+
+*******
+https://www.youtube.com/watch?v=QaaEI4T--Wg
+
+E okay, forse dovrei trovarmi un lavoro vero
+E okay, mamma mi dice sempre di fare il serio
+E okay, voglio puntare in alto e toccare il cielo
+
+E okay, porto con me i miei fra', siam partiti da zero
+
+Siam partiti da zero, partiti da zero, partiti da zero
+Siam partiti da ze', siam partiti da ze', siam partiti da zero, oh
+Siam partiti da zero, partiti da zero, partiti da zero, oh
+Siam partiti da ze', siam partiti da zero, oh
+
+Lei mi dice che mi ama
+Ma nessuno ama chi sta per la strada
+Chi pensa ai soldi prima che alla vita
+Perché senza soldi la vita ti sbrana
+
+E siamo senza fede, senza cuore
+Blocco spara col silenziatore
+Fra', ti lascia a terra ma non lascia prove
+Anche in mezzo a trenta, manco un testimone
+
+Sogniamo sti euro fatti da soli, partiti da zero
+Con qualche amico che riposa in pace
+E qualche amico che riposa al fresco
+
+Dammi una ragione per restare calmo
+Non ci riesco manco con 1g nel palmo
+Sono in giro stanco, con il viso bianco
+Col mio socio affianco, che la gira intanto
+
+Sopra e sotto il palco, la stessa persona
+Sennò piglio schiaffi quando torno in zona
+Tutta la mia gente non sogna il diploma
+Ma sogna una pistola per spararti in gola
+
+Siam partiti da zero, partiti da zero, partiti da zero
+Siam partiti da ze', siam partiti da ze', siam partiti da zero, oh
+Siam partiti da zero, partiti da zero, partiti da zero, oh
+Siam partiti da ze', siam partiti da zero, oh
+
+Appendo sti rappers dai piedi
+Come le piante di ganja albanesi
+Facci fumare, poi levati
+Ci stai sul cazzo, meglio se ci eviti
+
+Stacco teste con il micro'
+Chiedi di Sfera, fra', è sempre fornito
+Non ti sopporto, non sono un tuo amico
+I miei ragazzi ti fanno la mito
+
+Sotto i palazzi a fumare come ciminiere
+Mai socializzato col carabiniere
+Fra', siamo cresciuti tra buone persone
+Senza imparare le buone maniere
+
+Il flow più fresco di zona
+Trap king in persona, sta roba impressiona
+Tu resta a casa, non puoi starmi dietro
+Sposto lo sguardo e non sei più nel vetro, no
+
+E okay, forse dovrei trovarmi un lavoro vero
+E okay, mamma mi dice sempre di fare il serio
+E okay, voglio puntare in alto e toccare il cielo
+E okay, porto con me i miei fra', siam partiti da zero
+
+Siam partiti da zero, partiti da zero, partiti da zero
+Siam partiti da ze', siam partiti da ze', siam partiti da zero, oh
+Siam partiti da zero, partiti da zero, partiti da zero, oh
+Siam partiti da ze', siam partiti da zero, oh
+
 
 
 <a id=20>video526 Sfera Ebbasta - Ciny (Prod. Charlie Charles)</a>
