--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
@@ -222,6 +222,7 @@ leggi
 		2 piante #20.4
 		3 piante #20.6
 		200 piante #20.7
+		500 piante #20.9
 		6mila piante #20.2
 		7mila piante #20
 		1312 bologna #20.1
@@ -550,6 +551,30 @@ I benefici economici sono enormi, per quanto riguarda lo sviluppo della scienza,
 Le persone hanno bisogno di essere educate e quindi cambiare il loro atteggiamento.
 Il potenziale di dipendenza della cannabis è inferiore al potenziale di dipendenza della nicotina o dell’alcool e, per quanto ne sappia, nessuna persona è morta a causa di un overdose di cannabis naturale, eppure esistono grandi pregiudizi, motivati dagli interessi di determinati gruppi e industrie”.
 ha dichiarato Holy.
+
+
+<a id=20.9>fatto470 Vittime legge 309: tre coltivatori arrestati a Milano per coltivazione di 500 piante</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dh7hzPNFq08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+https://www.ansa.it/lombardia/notizie/2020/04/12/serra-di-marijuana-in-scantinato-a-milano-3-ai-domiciliari_49f46ced-443f-4609-b856-13b69f2b465e.html
+
+
+dati0
+	legge309 criminale 
+	vittime coltivatori 3uomini (eta tra 35anni e 27)
+	
+step5 polizia controlli x strade milano
+	2020-04-11-22-30
+	periferia nord/quartiere dergano/ via abba
+	odore inconfondibile (step3.4)
+	scantinato
+		500 piante
+		impianiti (irrigazione, aereazione, illuminazione)
+		
+step6 
+	arresti domiciliari
+	processati per direttissima
+
 
 
 <a id=20.8>fatto470 Piacenza, arrestato e condannato x una growbox 1x1. AIUTO!!</a>
