--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
@@ -79,7 +79,7 @@
 		milano Zona dergano filippino 2019-05 2020-04-06 recidivo #35
 	spacciatori ingrosso
 		cannabis #20
-	spacciatore dettaglio diversificato tutto un po donna(#36 #36.1)
+	spacciatore dettaglio diversificato tutto un po donna(#36 #36.1 #36.2)
 	spacciatori dettaglio farmacie-nero 
 		polizia
 			posto di blocco #28
@@ -157,6 +157,29 @@ step6 giustizia
 	rimesso in liberta
 	
 	
+<a id=36.2>fatto430 Napoli, donna arrestata per spaccio di 6g eroina 3g cocaina</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yISMDOn_A8k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://puntomagazine.it/2020/04/13/caivano-trovata-con-eroina-e-cocaina-arrestata-spaccaitrice/
+dati0
+	location napoli/caivano
+	legge criminale1
+	vittima1 pusher, T.C., 44enne, italiana
+		con precedenti di polizia
+	
+step5 controllo polizia - 
+	zona parco verde/ esterno di uno stabile
+	2020-04-13 
+	vedono vittima1 prelevare busta1 
+		consegnarla a signore in cambio di soldi
+		polizia la blocca
+		perquisizione 340euro. 25involucri eroina (6grammi). 15 involucri cocaina(3g)
+		reato-sbagliato detenzione e spaccio eroina e cocaina
+		reato-giusto violazione coronavirus
+		arresto 
+		
+step6 giustizia
+	questura di napoli diffonde nota arresto
+
 <a id=36.1>fatto430 Piemonte, donna 34enne fermata con 50g hashish, 1g di eroina e 1g di cocaina</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/CVLWkyGnRgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>					
 https://www.lastampa.it/verbano-cusio-ossola/2020/04/10/news/gignese-donna-di-34-anni-era-in-giro-senza-motivo-nell-auto-aveva-eroina-hashish-e-cocaina-1.38703285
