--- a/8.45.nonverificabile.dio.testo.bibbia.mauro-biglino.html
+++ b/8.45.nonverificabile.dio.testo.bibbia.mauro-biglino.html
@@ -13,21 +13,113 @@ Fede e' un altra cosa
 	io credo...
 	
 -------
-
+DATI DI FATTO BIBBIA
 
 BIBBIA scritta in molti secoli, non sappiamo da chi,
 	scritta ISPIRATA da dio (non sappiamo chi)
+	scrittori da decine persone sconosciute
+		altre persone fanno raccolte (canoni)
+	1. LIBRI
+		primi5 pentateuco TORAH attribuito a MOSE
+			mose circa 1200ac
+			scritto dopo esilio babilonese 5secolo ac.(7secoli dopo mose)
+			qnd mose non esisteva lingua ebraica
+			proto alfabeto sito elsatia 10secolo aC 
+			Libro isaia 66 capitoli
+				1-39 capitoli attribuiti a isaia xke non abbiamo motivo x negarlo
+				10-20 scrive un altra persona
+				40-55 scritti da deutero-isaia secondo-isaia (200anni dopo)
+				56-66 ISAIA3 alcuni decenni dopo ISAIA2
+			ci sono 2 versioni (con 300varianti)
+		riscritta molta 
+			profezie tutte postume
+				490anni 
+	2.CANONI
+		cattolico 46libri 
+		protestanti 39libri
+		ebrei 39
+		cristiani copti 39ebrei+altri
+		samaritani 6libri
+	
 -------- COMPLOTTO CHIESA---
 traduzione cattoliche
-	dio eloim
+	1.dio - ELOHIM
 		(verbi ogni tanto)
-	signore o eterno -jahve
-	onnipotente shaddai (al piu' signore delle steppe)
-	spirito ruhah
-	complotto
+		IM - plurale - spiegano singolare 
+			o Superlativo indefinito (no superlativo assoluto) x rendere indefinibilita di dio.
+			o plurale di intensita o sovranita'
+		TRADUZIONE legislatore supremo
+		Radici ALAHA norma regola
+		quanti sono? almeno 9 dice la bibbia.
+			https://youtu.be/2-Hmx6t4PPU?t=6832
+	2. altissimo - ELYON - quello che sta sopra (no superlativo assoluto)
+	3. JAHWE - signore o eterno
+		rabbino capo dice tempo molto lungo
+		JAHWA - vocalizzato 3000volte - testimoni di geova
+		https://youtu.be/2-Hmx6t4PPU?t=6074
+		patto con ebrei
+			ordini 613 
+				non chiamatemi invano . (capo guerriero disturbatelo x faccende grosse )
+				astenersi attivita il sabato. cosa e' attivita
+					pulce sulla giacca no xke cacciare
+			midrash (metodo ebraico di interpretazione e commento testi sacri ebraici)
+			promette terre
+			mentito con abramo, isacco, giacobbe e adesso-guerra
+			a giosue' vecchio gli dice xke non ti muovi a conquistare terra che ti ho promesso (se fosse dio-datore sarebbe contrario, capo militare ok)
+		generale MOSE
+			di a egiziani di farse consegnare tutto oro che possono
+			1200 kg di oro 700kg metalli
+			no schiavi ma esercito pagato
+	4. spirito - RUHAH
+	5. gloria - KAHVOT
+	6. onnipotente shaddai (al piu' signore delle steppe)
+	7. PADRE -PATER compare in greco - no problemi
+	complotto-chiesa
 		nome jahve lo tiene nascosto - circolare 2015 circa
 			non usate nome Jahve in liturgia xke non e' CRISTIANO ???
+			
+stirpe eloim(capi militari	
 
+popoli
+	SEM
+		EVER
+			TERACH
+				ABRAMO 
+					{professore American jewish university robert westler, maggiorparte ritiene che non sia mai esisteto, invenzione biblica }
+					ISACCO 
+						GIACOBBE deuteronomio32-8 assegnazione territori affidato a Jahwe
+							campagne conquiste militari  (contro piccoli popoli)
+								si ammazzavano tra cugini zii e nipoti
+								mohabiti - ELOIM KAMOSH
+									stele di mesha-RE=king (850 ac)
+									racconta battaglia con israeliti. sterminio 7000 ebrei donne e bambini . xke promesse a ELOIM-comandante
+								ammoniti MILKONA
+								amalechiti
+								edomiti
+								madianiti
+								sidoni - eloim femmina ASTARTE
+							paura grandi popoli
+								assiri, babilonesi, egiziani,
+				MAWR
+				ARAM
+					LOT
+		IVRIM -- EBREI
+		
+TRUFFA TRADUZIONE modificano
+1. verbi al plurale diventano al singolare
+	genesi-20-13 DIO mi fece errare- bibbie 
+		e fu come che fecero vagare me eloim da casa di padre mio
+		ITTU verbo plurare
+		https://youtu.be/2-Hmx6t4PPU?t=4299
+	A CHIAMARLO FUORI SONO DEI GIUDICI (FALSOOOOO)
+2. genesi-35-7
+	nella bibbia non c'e - traduzione (vero) DIO
+
+3. benedizioni della prima genitura 
+	esau scopre inganno chiede a padre-isacco. Hai benedizioni-primogenitura?
+	padre-isacco dice no la ho data tutta a tuo fratello
+	BENEDIZIONE= EREDITA'
+	
 preti ne parlano salmo x o salmo Y
 	mai quadro generale, non vogliono che tu capisca. 100% cattolici non sanno cosa viene detto nella bibbia (solo qualche frammento)
 	messa x leggere 
@@ -37,22 +129,43 @@ truffa al popolo sull'ignoranza
 	io credo in dio. maria giuseppe, pasqua, rosario, preghiere
 	ma non conoscono aspetti teorici.(struttura portante religione)
 
-
+non vogliono venga letta
+	1200-1800 proibito possederla- poteva finire sotto inquisizione
+		libro dio che vuole comunicare con uomo
+		se gente legge e capisce cade chiesa
 --------
-BIBBIA CATTOLICA (contenuti)
-	STUPRI
-	PEDOFILIA (32bambine...)
-	genocidi
+	
+--------
+bibbia originale
+	cita tutti popoli mediorientali
+		mai sumeri forse xke sono loro https://youtu.be/2-Hmx6t4PPU?t=8416
+	parla di effetti potenziale bomba atomica
+		https://youtu.be/2-Hmx6t4PPU?t=10412
 	
 -----
 visione biglino (bibbia libro militare)
 	ELOIM tanti comandanti-governatori (componente genetica diversa)
 		TANTI colleghi e sono stati assegnati diverse terre 
+			ipotesi
+				padre ELSHADDAI figli-colleghi(jahwe ) https://youtu.be/2-Hmx6t4PPU?t=4577
+					affidata famiglia abramo e divide famiglia x suoi 3figli
 			EL= singolare= complotto-traduzione con padre (=fantasia pura)
 				EL mio El mio xke hai abbandonato me? #truffa-chiesa
-			ELOIM-JAHVE ha compito di occuparsi di popolo di ISRAELE deutereonomio-32-8
+			ELOIM-JAHVE deutereonomio-32-8
 				https://youtu.be/lhlF3Bl0iho?t=513
 				poi governatore fatto diventato DIO
+				gli viene affidato
+					no ebrei no famiglia Abramo ma solo giacobbe 
+					abramo 
+					segno alleanza-militare
+						scappellare-cazzo
+							traditori va a sodoma
+								manda due angeli-malakim(aiutanti)
+								arrivano li arroganti, quasi linciati o incaprettati
+								Lot arriva mediatore offre 2figlie
+								2angeli-anashim(individui maschi) tirano in casa lot e chiudono porta
+								creano grande luce e si mettono in salvo
+								giorno dopo pioggia di fuoco. 5citta (sodoma, gomorra )
 			non e' unico SENZA DIO STRANIERO deutereonomio-32-8
 				KALOSH MILGOM MONASHTAROT 
 		creano umani
@@ -77,7 +190,8 @@ visione biglino (bibbia libro militare)
 					
 -------		
 GENESI
-
+-docente a newyork, studi biblici. pubblica x la jewish pubblication society
+	la creazione e' una successione di divisioni
 no parla creazione
 xke in ebraico non esiste vocabolo CREARE (men che meno creare dal nulla)
 verbo BARAH - tradotto con creare- Biglino modificare (situazione gia esistente)
@@ -87,8 +201,9 @@ ebrei CLONAZIONE - fabbricato adamiti partendo da uomo sapiens
 	BIGLINO: noi unici che non abbiamo nicchia ecologica, viviamo ovunque
 	noi specie costruiti x eseguire ordini
 		noi siamo parassiti
-		
-versetto 18 <a id=genesi-18>genesi-18</a>
+genesi-20-13
+	abramo racconta quando dio-jahve lo ha chiamato fuori da suoi padri
+versetto 18<a id=genesi-18>genesi-18</a>
 	ABRAMO vive all ombra della sua terra #4000anni-fa
 		3 personaggi vanno a visitare  (jahve si ferma a parlare con abramo)
 		ABRAMO dice ai 3 fermatevi a riposare
@@ -101,6 +216,8 @@ versetto 18 <a id=genesi-18>genesi-18</a>
 		va a sodoma
 			segno alleanza JAHVE-israeliti e' circoncisione
 			Dio va a sodoma a vedere piselli
+Genesi-35-7
+	giacoppe parla 
 ESODO
 GLORIA= kavod = aereo
 mose 
@@ -117,14 +234,21 @@ episodio2
 kavod scendeva nel tempio e lo riempiva.
 	
 DEUTERONOMIO
+versetto 29
+	distruzione SODOMA E GOMORRA
+		bibbia immoralita' sesso anale (gay o no) - biglino-originale punizione x cambio alleanza 
 versetto 32 <a id=deutereonomio-32-8>deutereonomio-32-8</a>
 	ELION = chiesa ALTISSIMO = ebraico-biglino no superlativo assoluto comandante 
 	divideva nazioni -secondo numero ELOIM (divisione terra)
 	PORZIONE in ebraico assegnazione- popolo di ISRAELE- altri KALOSH MILGOM MONASHTAROT 
 	
 	
-	
-	
+paolo- fondatore cristianesimo
+	prima lettera ai corinzi 
+		capitolo8
+			molti dei "4Riguardo dunque al mangiare le carni sacrificate agli idoli, noi sappiamo che non esiste al mondo alcun idolo e che non c’è alcun dio, se non uno solo. 5In realtà, anche se vi sono cosiddetti dèi sia nel cielo che sulla terra – e difatti ci sono molti dèi e molti signori.
+
+
 -------
 BIGLINO PERSONA
 conosce GRECO ANTICO
@@ -139,8 +263,75 @@ conosce GRECO ANTICO
 ebraico codice LENINGRADO - ALEPPO- antichi kumran
 
 
+------
+conclusioni biglino
+1. nella bibbia non esiste monoteismo (e' interpretazione teologica successiva https://youtu.be/2-Hmx6t4PPU?t=715)
+2. bibbia non parla creazione e/o creazione universo. ma solo divisioni terre
 
 
+
+biglino ambiti ricerca
+	clonazione anche nell corano (piu ovvia con )/
+		pecora dolly.... 
+		https://youtu.be/2-Hmx6t4PPU?t=2763
+		protocolli clonazioni biologi molecolari. unica differenza. non serve femmina intermedia (LILIT materiale extra biblico ebraico)
+			femmina ponte per fare adamiti (razza speciale x loro)
+			all interno dell uomo sapiens che hanno incominciato a fabbricare molto tempo prima
+			ADAMO ed EVA sono capostipiti di una razza clonati circa nel 4500ac
+			BIBBIA interessa rapporto con una famiglia di adamiti con Jahve
+			
+------
+Marco calliari analisi su biglino
+giusto
+	-guardare bibbia traduzione originale, no bugia. trarne conclusione (truffa)
+errore
+	-parlare di scienza
+	insistere sull ipotesi antichi (es egizi) avevano macchine e capacita clonare.
+	metodo analisi scrivere libri e conferenze
+------
+
+lingua ebraica
+	- non esiste parola: DIO, CREAZIONE https://youtu.be/2-Hmx6t4PPU?t=509
+	lo dice anche ESEGESI EBRAICA forum consulenza ebraica. massimo esegeta=AWRAH
+	" non ha senso parlare di monoteismo in una lingua che non ha una parola x il senso di DIo"
+	-Eternita. Dizionario Britannico Ebraico Aramaico biblico. HOLAM. non tradurre con ETERNITA. giusta traduzione TEMPO LUNGO
+		#accusariceve si inventa traduzione
+	-CREAZIONE -nella bibbia no dio creatore. verbo BARAH - corretta traduzione MODIFICARE (esistente)
+	storia
+		prime testimonianze proto alfabeto trovato.
+	--NON sappiamo come letto
+	sacro - separato, destinato a (DIO)
+		profano x umani
+		riservato cibo - le parti migliori ma 
+		grasso bruciato- endorfine xke calma - NUMERI-nr28
+	satan funzione temporanea
+	- cherubini oggetti meccanici
+	
+	
+-------
+chiesa
+	basata su cosa
+		1. antico testamento (no dio)
+		2. amore universale (non serve dio)
+		3. nuovo testamento
+		
+	dio da bibbia
+		onniscente
+			genesi-18vers13 
+				jahve arriva voglio andare a Sodoma 
+				voglio andare a vedere se e' vero che hanno fatto tutto male che e' giunto fino a me. lo voglio sapere 
+	gesu 
+		funzione 
+			redenzione 
+				peccato originale (esiste?)
+--------
+libri antichita  
+	paleo fanta scienza
+		1. oggetti volanti da guerra (carri alati)
+		2. bomba atomica
+		3. clonazione (dna ) spermatozoi su egizi..
+		5. dio che stava cavoli suoi. poi bacchetta magica fa universo
+			passano miliardi anni. 
 
 <a id=1>video527 Biglino spiega perche' la Chiesa e' una truffa che sfrutta l'ignoranza</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/mU1R9ze-rLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
