--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
@@ -70,6 +70,7 @@
 				di via dell'Archeologia #1
 			perugia#2
 			torino #7.1 #7.2
+				barriera Milano #7.3d
 		to usa
 			Sandiego 8000kg #6
 	merce eroina
@@ -1379,6 +1380,41 @@ step6
 		attesa convalida arresto
 
 
+<a name=7.3d>fatto430 A Torino, un nigeriano e un marocchino vengono arrestati per spaccio di cocaina e hashish</a>
+
+https://www.cronacaqui.it/droga-nascosta-bibbia-occultata-chiesa-un-arresto-denuncia-torino/
+
+dati0
+	legge309 criminale proibizionismo vendita-droga
+	vittima1, nigeriano, 30enne
+step5 controlli polizia
+	data settimana2020-04-06
+	via baltea
+	vedono vittima1 compravendita
+	perquisizione domestica
+		37grammi cocaina
+			in 2 sacchetti (1 armadio tra i vestiti, 1 in bibbia inglese )
+		+1000 euro in contanti
+		
+dati0
+	povero cristo vittima2 marocchino, 29enne,
+		precedenti di polizia
+
+
+step5 polizia pattugliamento
+	settimana2020-04-06
+	location torino/corso vittorio emanueleII/altezza chiesa evangelica valdese
+	vittima2 marocchino,29enne
+step3
+	vittima2 
+		cerca scappare in bici
+		butta 2 involucri 15grammi (hashish e marijuana)
+	reati
+		legge309 detenzione ai fini di spaccio
+		uscita-covid
+		resistenza pubblico ufficiale
+		
+		
 <a name=7.3c>fatto430 A Torino, pattuglie Falco arrestano 2 25enni per spaccio di 700g marijuana</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/nGeysznC_yc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
