--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
@@ -263,14 +263,15 @@ leggi
 		70g recidivo-carcere #25.4
 		190g #25.1
 		200g #25.7 
-		6kg panette torino #25.6
-		6kg ferrara #25.8
 		coronavirus
 			dal balcone  sistema a carrucole #40
 	3 trasporto ingrosso #26
 		panette + mare + spiaggia #34
 		2kg albanese #43
-	4 nascosta #28
+	4 vendita ingrosso
+		6kg panette torino #25.6
+		6kg ferrara #25.8
+		30kg roma #25.8b
 	giustizia torti armi #39
 
 
@@ -701,6 +702,34 @@ step6 giustizia
 		arresto
 		trasferito al Due Palazzi
 		
+
+<a id=25.8b>fatto470 Roma, trovato indiano con 30kg di hashish #leggecriminale</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zSJlWFxOuWc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.ilfaroonline.it/2020/04/21/anzio-nasconde-in-casa-trenta-chili-di-hashish-arrestato/334394/
+
+dati0
+	legge 309 criminale
+	vittima1, indiano 44enne
+
+	
+step5 controlli polizia
+	roma/litorale sud /a lavinio
+	2020-04-20-17
+	fermano vittima1
+	perquisizione domestica trovano
+		30kg di hashish (300 panette da 100g )... fonte? marocc
+		3.5 marijuana
+		0.5kg cocaina
+		targhe ... 
+		
+		
+step6 giustizia sbagliata
+	vittima1 portato in carcere-velletri
+	
+
+
+
+
 
 <a id=25.8>fatto470 Ferrara, arrestata 54enne con 8kg di marijuana #leggecriminale</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/pMSofPZvHnI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
