--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
@@ -155,10 +155,36 @@
 			trentino nascosto colonia miralago  #10.1
 		cannabis piccole dosi segnalazione prefettura #12 #12.1
 		cocaina detenzione #31
-		
+	
+	giovani overdose x divertimento
+		lombardia lecco #45
 
 
 
+
+<a id=45>fatto430 Lecco, un 18enne e 19enne muoiono di overdose in appartamento</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dkwKM6LZRlU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://tg24.sky.it/milano/2020/04/27/droga-ragazzi-morti-lecco.html
+
+
+dati0
+	location lecco/colico
+	vittima1 18enne
+	vittima2 19enne
+	
+step3 festa
+	2020-04-26-sera-tardi festa
+	+ ritrovo con 2amiche (incolume)
+	vittima1 e vittima2 morti
+	causa 
+		ipotesi1 droga
+		ipotesi cancellata si trattesse fuga di gas, arrivano pompieri
+step6 giustizia
+	indagini
+		2vittime interrogate 
+		magistrato
+			dispone sequestro appartamento
+			autopsia su 2vittime
 
 <a id=44.b>fatto430 Quartieri con prostitute e spaccio: Torino e il comitato San Donato-Martinetto</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/doaEoD12mas" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
