--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
@@ -265,6 +265,7 @@ leggi
 		50g +complicita genitori #25
 		70g recidivo-carcere #25.4
 		112g #25.9
+		115g scampia #25.11
 		190g #25.1
 		200g #25.7 
 		coronavirus
@@ -272,6 +273,7 @@ leggi
 	3 trasporto ingrosso #26
 		panette + mare + spiaggia #34
 		panette marocco - spagna  44000kg #34.b
+		da albania 900kg #34.c
 		2kg albanese #43
 	4 vendita ingrosso
 		1kg panette #25.8c
@@ -627,6 +629,28 @@ VERGOGNATEVI!
 Se questo è l'obbiettivo di più Europa, decisamente meglio più Italia.
 
 
+<a id=34.c>fatto470 Puglia, confiscato carico di 900kg di Cannabis dall'Albania #leggecriminale</a>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aN7Wtaj3YEU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+lagazzettadelmezzogiorno.it/gallery/bari/1222387/droga-dall-albania-a-monopoli-sequestrata-1-tonnellata-di-hashish-e-marijuana-2-arresti.html
+https://www.lagazzettadelmezzogiorno.it/upload/23547514-diamp4.mp4
+spedizione 
+	da albania
+	arrivo bari a largo Monopoli
+		2020-04-27-lun-notte
+		2 motoscafi (250cav ciascuno)
+			scafisti italiani arrestati
+		646kg ganja + 250kg hashish = 896kg  (valore mercato 10milioni circa)
+
+	
+step6 giustizia sbagliata
+	pm di turno, Daniela Chimienti.
+	legge criminale
+		2vittime scafisti
+	danni
+		spreco 900kg cannabis, 2vittime carcere, clienti
+
+
 <a id=34.b>fatto470 Marocco, sequestrati 44.000 kg di hashish #leggecriminale</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/MW9gts8lfYw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 https://lecannabiste.it/sequestro-di-44-tonnellate-di-hashish-in-marocco/?fbclid=IwAR306kAZL3GZ_a3LNNXflgv80qgr5vys-1V9KMuxQWEXsX9F1I9Bg65n3gE
@@ -748,6 +772,32 @@ step6 giustizia
 		arresto
 		trasferito al Due Palazzi
 		
+
+<a id=25.11>fatto470 Napoli, fermato 51enne per spaccio di 112grammi cannabis #leggecriminale</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PsKuY5Ex-ts" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+napolitoday.it/cronaca/arresto-spacciatore-167-scampia.html
+
+dati0
+	location napoli scampia/ quartiere 167
+	legge309 criminale 
+	vittima1 51enne, spacciatore
+		precedenti
+	
+step5 controlli polizia
+	breve periodo osservazione
+	visto vittima1 vendere a 4 clienti
+	4clienti clienti segnalati a prefettura, 8g marijuana
+	
+vanno da vittima1
+	perquisizione
+		605euro cash
+		controllo spazi circostanti
+			50 stecchette hashish (panetta tagliata) =100g 
+			+ 7g ganja
+step6 giustizia sbagliata
+	vittima1 arrestato
+	
+	
 
 <a id=25.10>fatto470 Bassano, pusher arrestato per 66grammi di Cannabis #leggecriminale</a>
 
