--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
@@ -268,6 +268,7 @@ leggi
 		70g recidivo-carcere #25.4
 		100g #25.9b
 		112g #25.9
+		113g #25.9c
 		115g scampia #25.11
 		190g #25.1
 		200g #25.7 
@@ -822,6 +823,35 @@ step6 giustizia sbagliata
 		
 		
 		
+<a id=25.9c>fatto470 Roma, studente 20enne arrestato per 113g di hashish #leggecriminale</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e8PnG9gJ-o0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+
+sanremonews.it/2020/04/30/mobile/leggi-notizia/argomenti/cronaca/articolo/20enne-universitario-di-imperia-arrestato-a-roma-per-spaccio-di-droga-aveva-113-grammi-di-hashish.html
+
+dati0
+	location roma
+	legge309 criminale proibizionismo
+	vittima1 pusher 20enne di imperia
+		studia e risiede a Roma
+		
+step5 controllo di polizia x coronavirus
+	zona parioli
+	2020-04-30
+	vittima1 trovato in strada, senza documenti
+	accompagnato a casa
+		odore di marijuana
+	entrano e trovano
+		113g hashish
+		foglietti con entrate e uscite denaro
+		cash 4000euro
+		bilancino e coltello (taglio)
+		8g marijuana di coinquilino (provenienza?)
+step6 giustizia
+	arrestato （domiciliari o carcere?)
+	
+	
+
+
 <a id=25.9b>fatto470 Vittime legge309: 19enne arrestato per 100g marijuana #leggecriminale</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/KkDlg13TDwE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 https://www.galluraoggi.it/cronaca/fermato-controllo-trovato-etto-marijuana-arrestato-19enne-29-aprile-2020/
