--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
@@ -246,6 +246,7 @@ leggi
 		a casa box +1grammo #20.10
 		2 piante #20.4
 		3 piante #20.6
+		7 piante #20.6b
 		20ina piante #20.11
 		49piante #20.12
 		200 piante #20.7
@@ -1567,6 +1568,32 @@ step6 giustizia
 			il fucile calibro 12, con relative cartucce, di provenienza illecita
 		legge 309
 		
+<a id=20.6b>fatto470 Napoli, 47enne denunciato per coltivazione di 7 piantine di cannabis</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ntKlK5tXrjo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.ilmattino.it/napoli/cronaca/arresto_ischia_oggi-5203315.html
+
+
+dati0
+	location napoli/ischia
+	vittima1 47enne coltivatore 
+		precedenti 
+step5 polizia
+	2020-05-01-mattina
+	coordinati da capitano-mitrione
+	chiamati x sedare rissa in appartamento
+	odore
+	perquisito appartamento
+	trovato
+		piccola serra con 7 piante
+		+32g di marijuana essiccata 
+		+armi leggere mazza da baseball e pistola ad aria compressa senza punta rossa
+		+ 2 confezione di piombini 
+
+step6 giustizia
+	legge309 detenzione ai fini di spaccio di stupefacenti
+	detenzione abusiva di armi
+	vittima1
+		denunciato a piede libero ??
 <a id=20.6>fatto470 Viterbo, agricoltore arrestato per coltivazione di 3 piante di Cannabis</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/MnPtTiy0VVs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 https://www.ontuscia.it/cronaca/bagnoregio-arrestato-agricoltore-coltivava-canapa-indiana-314394
