--- a/3.corpo.infiammazione.1causa.2info.txt.laws.fonte.opinione.Apolitici.malagiustizia.proteggere-criminale.html
+++ b/3.corpo.infiammazione.1causa.2info.txt.laws.fonte.opinione.Apolitici.malagiustizia.proteggere-criminale.html
@@ -21,7 +21,20 @@ legittima difesa
 				sconto pena 50 #2
 leggi difendono criminale
 	no legittima difesa#1
-	occupazione abitazione con bambino 
+	occupazione abitazione con bambino
+		torino 
+			2020-01 qnt=82 
+			2020-04 40% qnt=101 rom #3 (post sgombero campi rom via Germagnano)
+
+
+
+<a id=3>video518 Leggi che difendono criminali: 101 occupazioni di case a Torino</a>
+cronacaqui.it/case-popolari-occupate-torino-salgono-101-40-mano-ai-rom/
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8u_aaqUI5yk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
 
 
 
