--- a/3.corpo.infiammazione.1causa.2info.soldi.criminalita.rom-zingari.html
+++ b/3.corpo.infiammazione.1causa.2info.soldi.criminalita.rom-zingari.html
@@ -9,10 +9,28 @@ furti seriali
 	auto #1
 	
 dove 
+	milano 
+		campo rom via Bonfadini #3
+			capo lo zio uomo alto 1.65m Angelo Guarnieri
+				ricettazione preziosi 1milione di euro trovati
+				traffico di cocaina 
+				auto pezzi venduti nel mercato nero
 	napoli
 		Fabrizio Hadzovic 
 			2017 tampona carabinieri
 			2020 
+
+<a id=3>video529 Rom Ladri: retata al campo rom di Milano via Bonfadini e arrestano 21 zingari</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ifPZK-1-CL8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.tg24-ore.com/2019/02/10/operazione-dei-carabinieri-arrestati-21-rom-trovati-kg-doro-un-milione-di-euro-e-pezzi-di-auto-smontate/
+
+retata
+	campo rom milano via bonfadini
+	retata 100 carabinieri
+	arresto 21 rom
+	
+	
+	
 
 <a id=2>video529 Napoli, rom dopo fallito colpo in banca uccide poliziotto</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/XXXXXXXX" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
