--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.cannabis.legge242+309.html
@@ -295,6 +295,7 @@ leggi
 	3 trasporto ingrosso #26
 		nazionale
 			6kg finto-delivery nigeriano #34.e
+			10,8kg +posta-normale #34.f
 			20kg gdf #34.d
 		panette + mare + spiaggia #34
 		panette marocco - spagna  44000kg #34.b
@@ -736,6 +737,37 @@ VERGOGNATEVI!
 Se questo è l'obbiettivo di più Europa, decisamente meglio più Italia.
 
 
+<a id=34.f>fatto470 Alessandria, 44enne ordina per posta 10kg di cannabis normale #legge309criminale</a>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9gfsRC2RMWI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.lastampa.it/alessandria/2020/05/12/news/alessandria-compra-10-kg-di-marijuana-e-se-li-fa-portare-a-casa-da-un-normale-corriere-1.38834824?%3Fref=fbpp
+dati0
+	location alessandria
+	criminale legge309
+	vittima1 Giovanni Callipari, 44 anni pusher-ingrosso
+		incensurato
+		avvocati Giancarlo Triggiani e Vittorio Spallasso
+	vittima2 amico, 42enne, di alessandria
+		avvocato2 Andrea Baravalle
+	
+step3 tutto normale
+vittima1 ordina 10kg erba x vendita all ingrosso
+usa corriere normale ignaro
+polizia scopre (forse x odore). segue il pacco
+riceve pacco
+	(insieme ad amico2)
+	polizia arriva
+	pacco: 20 involucri da 550g di ganja. totale 10.8kg 
+	
+
+step6 giustizia sbagliata
+	gip Paolo Bargero
+		arresto richiesta sostituto procuratore Francesco Bruzzone
+		domiciliari vittima1
+		piede libero vittima2
+	avvocato2 «Lui non c’entra niente, è del tutto estraneo».
+	
+	
 <a id=34.e>fatto470 Milano, finto delivery nigeriano trasporta 6kg di ganja #legge309criminale</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/JCxCyxUEg78" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
