--- a/1.fisico.3time.need.add.cibo-food.avariato.html
+++ b/1.fisico.3time.need.add.cibo-food.avariato.html
@@ -5,10 +5,31 @@
 <body>
 <pre>
 
+alcool clandestino
+	2020-05-15 42morti #1
 
-<a id=1>1</a>
 
 
+
+<a id=1>video530 Messico, 42 morti intossicati durante funerale per alcool adulterato</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1m6chssZvnI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.blitzquotidiano.it/cronaca-mondo/messico-bevono-alcol-adulterato-3186861/
+
+dati0
+	location messico/puebla
+
+
+step2 circostanze
+x coronavirus no molto alcool in giro(in particolare la birra )
+	produzione domestiche o clandestine 
+veglia funerale
+	80 presenti
+	sintomi
+		soffrivano di nausea, vomito o mal di testa 
+	42morti 11in grave
+	polizia
+		sequestro 200 litri no arresti
+			cercano provenienza
 
 </pre>
 </body>
