--- a/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
+++ b/2.info.leggi.fonte.44illogiche.opinioni.proibizionismo.droghe.html
@@ -119,6 +119,7 @@
 			emilia romagna
 				ravenna #43.2 faenza #43.2b
 			roma
+				zona san giovanni autonoleggio #27.4
 				tor bella monaca 
 					via dell archeologia 2020-05-13 #27.3c
 				metro centro-rai(saxa rubra #27.3b)
@@ -1158,6 +1159,65 @@ step6 giustizia sbagliata
 	reato legge 309 detenzione ai fini di spaccio
 	
 
+<a id=27.4>fatto430 Roma, arrestati 6 spacciatori compresi titolari autonoleggio</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CoSDr6ryvRA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+casilinanews.it/134171/attualita/cronaca/controlli-antidroga-roma-sequestrati-2-kg-cocaina-20-kg-marijuana.html
+
+
+dati0
+	vittime italiani
+		ditta autonoleggio roma/ zona san giovanni
+			2titolari
+		4arrestati
+			Z.G. del 2000, incensurato, vittima1
+		5denunciati
+			vittima5 M.M., classe ’85.
+
+step5 polizia
+	2020-05-17 ditta1 
+	segnalazione via vai sospetto
+	polizia fa appostamenti
+	molti clienti entrano e non fanno transazioni
+	perquisizione
+		nascondiglio1 in battiscopa con meccanismo cassetto calamitato
+		nascondevano dosi cocaina
+	2titolari
+		perquisizioni domestiche
+			in sottoscala di 1vittima: mobile con meccanismo doppofondo
+			altra "droga"
+	denunciato
+		vittima1  200 gr. di cocaina
+	cocaina 
+		confezionata in palloncini x acqua (trovati in casa vittima1)
+			
+			
+caso2
+dati0
+	criminale legge309
+	location roma/ via nomentana
+	vittima1 ragazzo italiano dell85, 
+	vittima2  R.R. del ’75
+step5 controlli polizia
+	2020-05-16
+	perquisizione vittima1 
+	trovano in tasca alcune dosi cannabis
+	perquisizione domestica
+		200g tra hashish e marijuana (suddivisa in dosi per vendita)
+		
+	forte odore da stanza affianco
+		 1.6 kg di cocaina, 
+		 1.2 kg di hashish 
+		 1.1 kg di marijuana
+	in salotto 20kg 
+		detti di cannabis light ma senza certificazione
+		ai narcotest?????? positivo
+		
+		
+step6 
+	vittima1 e vittima2 grandi quantita quindi messi in carcere REGINA COELI
+		
+		
+			
 <a id=27.3c>fatto430 Arresti inutili spacciatori: 2 pusher a Tor Bellamonaca</a>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/G3FcLKPxa7g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
