--- a/2.info.supporto.informatica.disordine.web2.0.1source.video.youtuber.html
+++ b/2.info.supporto.informatica.disordine.web2.0.1source.video.youtuber.html
@@ -26,8 +26,11 @@ quantita
 		sx max felicitas 
 			trash alla dipre'
 				martina e antonio razzi 2020-05-14 #3
-		troll complottista gian marco saolini
-			finto antennista#4
+		troll  gian marco saolini
+			scontro ridicoli meridionali-settentrionali
+				napoli luoghi comuni sigaretta, pizza, noi u core, voi fiume, voi soldi, poca cultura (dialetto insulti, calcio )non venite #4.1
+				milano aperitivi #4.2
+			complottista finto antennista#4
 	youtube
 		0info gaming pewdiepie semi recensione semi intrattenimento nopro
 			cicciogamer89 mirko alessandrini #
@@ -144,6 +147,12 @@ autodefinizione
 computer hp marcio 35k euro
 
 primo che commenta regalo orologio valore inestimabile 
+
+<a id=4.1>video512 Troll Gian Marco Saolini: napoletano risponde a barista Milanese</a>	
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1UJC5OI3ejg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.facebook.com/gmsaolini/videos/176494150299438/
+
 
 <a id=4>video512 Troll Gian Marco Saolini: il complotto antenne 5g aiuta coronavirus</a>	
 <iframe width="560" height="315" src="https://www.youtube.com/embed/89t3U7IK8CI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
